Post api is in WIP.

--- a/changelog.text
+++ b/changelog.text
@@ -10,3 +10,7 @@ A: Steps
         5. run 'flutter packages pub run build_runner build --delete-conflicting-outputs'
         6. done.
 ====================================================================================================
+20/08/2020
+----------
+1. Post api is in WIP.
+====================================================================================================
