Post api is implemented.

--- a/changelog.text
+++ b/changelog.text
@@ -12,5 +12,5 @@ A: Steps
 ====================================================================================================
 20/08/2020
 ----------
-1. Post api is in WIP.
+1. Post api is implemented.
 ====================================================================================================
